# SO2

./: CMakeLists.txt  etap2.cpp  etap3.cpp  main.cpp  vcpkg.json
